tests/js/success/cfg_store1.js
var obj = {};
obj["x"] = 1;
