tests/js/error/semantics/builtin_array_reduce2.js
function f() {return "x"}
var __result1;

__result1 = [1,2].reduce(f);
var __expect1 = "x";

